# serial-stamp-web

./: AGENT.md  IMMEDIATE_PREVIEW.md  IMPLEMENTATION_PLAN.md  PREVIEW_OPTIMIZATION.md  README.md  SCALING_FIX.md  TESTING_WASM.md  TEXT_RENDERING.md  WASM_RENDERING.md  ZOOM_FEATURE.md  agent.md  package.json  pnpm-lock.yaml  project-archi-overview.md
.zed/: settings.json
docs/: PER_TICKET_CACHING.md
src-wasm/: Cargo.toml
src-wasm/src/: font_loader.rs  lib.rs  ticket_renderer.rs
src/lib/: db.ts  query.ts  types.ts
src/lib/canvas/: TicketRenderer.ts
src/lib/components/editor/: BarcodeStampEditor.svelte  QrCodeStampEditor.svelte  SheetPreview.svelte  StampPanel.svelte  TextStampEditor.svelte  TicketPreview.svelte
src/lib/components/forms/: DataSourcesForm.svelte  EventInfoForm.svelte  SheetLayoutForm.svelte
src/lib/components/icons/: IconArrowLeft.svelte  IconBarcode.svelte  IconDatabase.svelte  IconDocument.svelte  IconFolder.svelte  IconPlus.svelte  IconQrCode.svelte  IconSettings.svelte  IconTag.svelte  IconText.svelte  IconTrash.svelte  IconWarning.svelte
src/lib/components/ui/: Accordion.svelte  Button.svelte  EmptyState.svelte  Modal.svelte  ModalConfirm.svelte  ProjectCard.svelte  TemplateSyntaxHelp.svelte
src/lib/components/ui/forms/: Calendar.svelte  DateInput.svelte  DistributionModeSelector.svelte  FileUpload.svelte  GridSizeSelector.svelte  ImageUpload.svelte  NumberInput.svelte  TextInput.svelte
src/lib/components/wizard/: StepDataSources.svelte  StepNameAndImage.svelte  StepStamps.svelte  Wizard.svelte
src/lib/data/: projects.ts
src/lib/engine/: data.ts  template.ts
src/lib/queries/: projects.svelte.ts
src/lib/services/: barcode.ts  fontLoader.ts  preview.ts  qrcode.ts  wasmPreview.ts
src/lib/stores/: wizard.svelte.ts
src/lib/utils/: cn.ts  form.ts  image.ts  uuid.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/projects/[projectId]/: +page.svelte
src/routes/projects/new/: +layout.svelte  +page.svelte
static/: sample-tickets.csv
(+9 files in other folders)
