[package]
name = "pdf-generator"
version = "0.1.0"
edition = "2021"
description = "WASM-based PDF generator for Serial Stamp"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }

[profile.release]
# Optimize for small WASM size
opt-level = "s"
lto = true
