[package]
name = "pdf-generator"
version = "0.1.0"
edition = "2021"
description = "WASM-based PDF generator for Serial Stamp"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console", "CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement"] }

# Text rendering
rusttype = "0.9"
ab_glyph = "0.2"

# Barcode generation - we'll implement simple barcode rendering manually
# or use imageproc for drawing primitives

# QR code generation
qrcode = { version = "0.14", default-features = false }

# Color parsing
csscolorparser = "0.6"

# Image processing utilities
imageproc = "0.25"

[profile.release]
# Optimize for small WASM size
opt-level = "s"
lto = true
